patient_service/k8s/patient_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
      - name: patient-service
        image: kanishk2207/patient_service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
