patient_service/k8s/patient_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-service-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: patient-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 8080
